# Ruby

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateVS2022.bat  LaunchVS.bat  README.md  SetupDependencies.bat
Data/BitMaps/: OakLabBitMap.csv  PalletTownBitMap.csv  Route1BitMap.csv
Data/Shaders/: Moving.vert
Data/Textures/: BattleScene.json  Icon.afphoto  Player_NPCSprites.json  TileSet.json
Data/TileTypes/: PalletTownTileTypes.json  Route1TileTypes.json
Data/Tilemaps/: OakPokemonResearchLab.json  OakPokemonResearchLab.tmx  OakPokemonResearchLab.tsx  OakPokemonResearchLabTilemap.json  OakPokemonResearchLabTilemap.tmx  OakPokemonResearchLabTileset.json  OakPokemonResearchLabTileset.tsx
Game/: Game-Shared.vcxitems  Game-Shared.vcxitems.filters  Game-Win32.vcxproj
Game/Data/Shaders/: Color.vert  Moving.vert
Game/Source/: Constants.h  GamePCH.h
Game/Source-Win32/: WinMain.cpp
Game/Source/Controllers/: AIController.cpp  AIController.h  AStarPathFinder.cpp  AStarPathFinder.h  PlayerController.cpp
Game/Source/Game/: Game.cpp  Game.h
Game/Source/GameObjects/: Entity.cpp  Entity.h  GameCamera.cpp  GameCamera.h  Trainer.cpp  Trainer.h
Game/Source/GameObjects/OakLabObjects/: OakLabDeskTop.cpp  OakLabDeskTop.h  OakLabMachineTop.cpp  OakLabMachineTop.h  OakLabMap.cpp  OakLabMap.h  OakLabPlantTop.cpp  OakLabPlantTop.h  OakLabTableTop.cpp  OakLabTableTop.h  ProfessorOak.cpp  ProfessorOak.h
Game/Source/GameObjects/PalletTownObjects/: OakHouse.cpp  OakHouse.h  PalletTownMap.cpp  PalletTownMap.h  PlayerHouse.cpp  PlayerHouse.h  RivalHouse.cpp  RivalHouse.h  TownBoy.cpp  TownBoy.h  TownGirl.cpp  TownGirl.h
Game/Source/GameObjects/UI/: PokeBall.cpp  PokeBall.h  ScoreNumber.cpp  ScoreNumber.h  UIObject.cpp  UIObject.h
Game/Source/GameObjects/WoodsObjects/: PettleburgWoodsMap.cpp  PettleburgWoodsMap.h  WildPokemonTile.cpp  WildPokemonTile.h
Game/Source/GameplayHelpers/: FileIOManager.cpp  FileIOManager.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  TileMap.cpp  TileMap.h  TileMapExtras.cpp  TileMapExtras.h  TileMapOakLab.cpp  TileMapOakLab.h  TileMapPalletTown.cpp  TileMapPalletTown.h  TileMapWoods.cpp
Game/Source/Mesh/: Canvas.cpp  Canvas.h  Mesh.cpp  Mesh.h
Game/Source/Scenes/: OakLab.cpp  PalletTown.cpp  PalletTown.h  PetalBergWoods.h  PetalbergWoods.cpp  Scene.cpp  Scene.h
Game/Source/Sprites/: AnimatedSprite.cpp  AnimatedSprite.h
Libraries/Framework/: Framework-Shared.vcxitems  Framework-Shared.vcxitems.filters  Framework-Win32.vcxproj
Libraries/Framework/Source/: FrameworkPCH.h
Libraries/Framework/Source/Events/: DoorEvent.h  Event.h  InputEvent.h
Libraries/Framework/Source/GL/: GLHelpers.cpp
Libraries/Framework/Source/GameCore/: GameCore.h
Libraries/Framework/Source/Math/: MathHelpers.h  Vector.h
Ruby/: Ruby.sln
Ruby/CJson/: CJson.vcxproj  CJson.vcxproj.filters
Ruby/Data/Shaders/: Color.frag  Color.vert  Moving.frag
Ruby/Data/Textures/: OakLabTileSet.json  WoodsTileSet.json
Ruby/Framework/: Framework.vcxproj  Framework.vcxproj.filters
Ruby/Framework/Source/: FrameworkPCH.h  InputManager.cpp  InputManager.h
Ruby/Framework/Source/Events/: CollisionEvent.h  Event.h  (+4 more)
Ruby/Game/: Game.vcxproj  Game.vcxproj.filters
Ruby/Game/Source/: Constants.h
Ruby/Glad/: Glad.vcxproj
Ruby/Glad/src/: glad.c
Ruby/Ruby/: Ruby.vcxproj  Ruby.vcxproj.filters
Ruby/Ruby/Source/: GamePCH.h
Scripts/: InitSubmodules.bat
Source/: CMakeLists.txt
Source/Framework/: CMakeLists.txt  FrameworkPCH.h  InputManager.h  TilemapLoader.cpp  TilemapLoader.h
Source/Framework/Events/: CollisionEvent.h  DoorEvent.h  EventManager.cpp  EventManager.h  InputEvent.h
Source/Framework/GL/: GLHelpers.cpp  GLHelpers.h
Source/Framework/GameCore/: GameCore.cpp  GameCore.h
Source/Framework/Input/: InputManager.cpp  InputManager.h
Source/Framework/Math/: Color.h  Matrix4Float.cpp  Matrix4Float.h  Rectangle.h  Vector2Float.cpp  Vector2Int.cpp  Vector3Float.cpp  Vector3Float.h  Vector3Int.cpp  Vector3Int.h  Vector4Float.cpp  Vector4Float.h  Vector4Int.cpp  Vector4Int.h
Source/Framework/Utility/: DebugUtility.cpp  FileUtility.h  MathUtility.cpp  ShaderProgram.cpp  ShaderProgram.h
Source/Framework/Win32/: FrameworkMain.cpp  FrameworkMain.h
Source/Game/: CMakeLists.txt  Constants.h  GamePCH.h
Source/Game/Controllers/: AIController.cpp  AIController.h  AStarPathFinder.cpp  AStarPathFinder.h  PlayerController.cpp  PlayerController.h
Source/Game/Entities/: Entity.cpp  Entity.h  GameCamera.cpp  GameCamera.h  Level.cpp  Player.cpp  Player.h  Sprite.cpp  Sprite.h
Source/Game/Entities/OakLabObjects/: OakLabDeskTop.cpp  OakLabDeskTop.h  OakLabLevel.cpp  OakLabLevel.h  OakLabMachineTop.cpp  OakLabMachineTop.h  OakLabPlantTop.cpp  OakLabPlantTop.h  OakLabTableTop.cpp  OakLabTableTop.h  ProfessorOak.cpp  ProfessorOak.h
Source/Game/Entities/PalletTownObjects/: OakHouse.cpp  OakHouse.h  PalletTownLevel.cpp  PalletTownLevel.h  PlayerHouse.cpp  PlayerHouse.h  RivalHouse.cpp  RivalHouse.h  TownBoy.cpp  TownBoy.h  TownGirl.cpp  TownGirl.h
Source/Game/Entities/UI/: PokeBall.cpp  PokeBall.h  ScoreNumber.cpp  ScoreNumber.h  UIObject.cpp  UIObject.h
Source/Game/Entities/WoodsObjects/: PetalburgWoodsLevel.cpp  WildPokemonTile.cpp  WildPokemonTile.h
Source/Game/Game/: Game.cpp  Game.h
Source/Game/GameplayHelpers/: Frame.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  TileInfo.h  TileMap.cpp  TileMap.h  TileMapExtras.cpp  TileMapExtras.h  TileMapOakLab.cpp  TileMapOakLab.h  TileMapPalletTown.cpp  TileMapPalletTown.h  TileMapRoute1.cpp  TileMapRoute1.h  TileMapWoods.cpp  TileMapWoods.h
Source/Game/Mesh/: Canvas.cpp  Canvas.h  Mesh.cpp  Mesh.h
Source/Game/Scenes/: OakLab.cpp  OakLab.h  PalletTown.cpp  PalletTown.h  PetalburgWoods.cpp  PetalburgWoods.h  Scene.cpp  Scene.h
Source/Game/Sprites/: AnimatedSprite.cpp  AnimatedSprite.h
Source/Game/Win32/: Main.cpp
Source/Ruby/Framework/: Framework.vcxproj  Framework.vcxproj.filters
Source/Ruby/LodePNG/: LodePNG.vcxproj  LodePNG.vcxproj.filters
Source/Ruby/Ruby/: Ruby.vcxproj
(+206 files in other folders)
